# applyflow

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.api  Dockerfile.worker  FULLSTACK_IMPLEMENTATION_PROMPT.md  FULLSTACK_IMPLEMENTATION_STATUS.md  GITHUB_MONOREPO_GUIDE.md  NEXT_THREAD_HANDOFF.md  PROJECT_DOCUMENTATION.md  README.md  alembic.ini  docker-compose.yml  index.py  pyproject.toml  render.yaml  vercel.json
alembic/: env.py
alembic/versions/: 20260328_0001_backend_foundation.py  20260331_0002_profile_uploads.py  20260403_0003_phase8_hardening.py
api/: index.py
frontend/: .env.example  index.html  openapi.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.js
frontend/src/: main.tsx  styles.css
frontend/src/app/: App.tsx  providers.tsx  (+1 more)
scripts/: export_openapi.py  run_migrations.sh  start_api.sh  start_worker.sh
src/jobfit_api/: __init__.py  auth.py  database.py  dependencies.py  documents.py  main.py  models.py  observability.py  queue.py  schemas.py  security.py  services.py  settings.py  task_processing.py  worker.py
src/jobfit_cli/: __init__.py  app.py  cli.py  config.py  constants.py  docs.py  google_auth.py  models.py  openai_service.py  prompts.py  sheets.py  storage.py
src/jobfit_core/: __init__.py  models.py  openai_service.py  prompts.py  workflows.py
tests/: test_api_foundation.py  test_api_settings.py  test_app.py  test_config.py  test_docs.py  test_documents.py  test_migrations.py  test_models.py  test_openai_service.py  test_phase3_api.py  test_phase4_api.py  test_phase7_internal_workspace_api.py  test_prompts.py  test_queue.py  test_sheets.py  test_workflows.py
(+28 files in other folders)
