[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "job-fit-evaluator"
version = "0.1.0"
description = "CLI for scoring resume-to-job fit with OpenAI and logging results to Google Sheets."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "openai>=1.45.0",
  "gspread>=6.1.2",
  "google-api-python-client>=2.154.0",
  "google-auth>=2.35.0",
  "google-auth-oauthlib>=1.2.1",
  "pydantic>=2.9.2",
  "python-dotenv>=1.0.1",
]

[project.scripts]
jobfit = "jobfit_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
